--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,11 @@
         android:theme="@style/AppTheme">
         <activity android:name=".AddClass" />
 
+        <meta-data android:name="DATABASE" android:value="class_track.db" />
+        <meta-data android:name="VERSION" android:value="2" />
+        <meta-data android:name="QUERY_LOG" android:value="true" />
+        <meta-data android:name="DOMAIN_PACKAGE_NAME" android:value="com.codeyard.classtracker" />
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
