--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.github.satyan:sugar:1.4'
     implementation 'com.wdullaer:materialdatetimepicker:4.2.3'
+    implementation 'androidx.preference:preference:1.1.1'
+
 }
